# fastapi-cloud

./: configTables.py  pyproject.toml
entities/: userEntity.py
models/: userModel.py
routes/: app.py
utils/: connDB.py
